--- a/views/header.html
+++ b/views/header.html
@@ -68,7 +68,7 @@
 					<!--li><a ui-sref="app.admin.setup.eagle-eye-directory">Eagle Eye Directory</a></li-->
 				</ul>
 			</li>
-			<li><a href=""><span>Activity</span></a></li>
+			<li><a ui-sref="app.admin.activity"><span>Activity</span></a></li>
 			<li><a href=""><span>Reports</span></a></li>			
 		</ul>
 	</div> 
