--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -99,7 +99,7 @@
 												<div class="row">
 													<div class="form-group col-sm-12 col-md-12">
 														<label for="">Device Name</label>
-														<input type="text" maxlength="30" name="device_name" ng-model="device.device_name" id="" class="form-control" placeholder="" required>
+														<input type="text" maxlength="30" name="device_name" ng-model="device.device_name" id="" class="form-control" autocomplete="off" placeholder="" required>
 													</div>
 													
 												</div>
