--- a/styles/custom.css
+++ b/styles/custom.css
@@ -3125,3 +3125,8 @@ input.ng-invalid-required.error {
 .singlePlayer{
 	height:480px;
 }
+
+
+
+.clckevent .panel .panel-heading .panel-title .accordion-toggle{padding: 0px;}
+.clckevent .panel .panel-heading .panel-title .accordion-toggle > span > div{padding: 10px 15px;}
