--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -183,10 +183,10 @@
 														<label class="btn btn-default" ng-model="userData.status" uib-btn-radio="0">Inactive</label>
 													</div>
 												</div>													
-												<div class="form-group col-sm-6 col-md-3" ng-hide="radioModel=='Inactive'">
+												<div id="expirationDateMainDiv" class="form-group col-sm-6 col-md-3" ng-hide="radioModel=='Inactive'">
 													<label for="">Expiration Date</label>
-													<div class="input-group userexp" ng-controller="DatepickerDemoCtrl" >
-														<input type="text" ng-disabled="userData.status == 0" class="form-control" uib-datepicker-popup="dd/MM/yyyy" is-open="opened" min-date="mindate" datepicker-options="dateOptions" ng-required="true" close-text="Close" ng-model="userData.expiration_date"/>
+													<div id="expirationDateInnerDiv" class="input-group userexp" ng-controller="DatepickerDemoCtrl" >
+														<input type="text" id="expirationdate" name="expirationdate" ng-disabled="userData.status == 0" class="form-control" uib-datepicker-popup="dd/MM/yyyy" is-open="opened" min-date="mindate" datepicker-options="dateOptions" ng-required="true" close-text="Close" ng-model="userData.expiration_date"/>
 														<span class="input-group-btn">
 															<button  ng-disabled="userData.status == 0" type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 														</span>
@@ -274,10 +274,10 @@
 								
 								<md-tab label="Credentials">
 								<md-content>														
-									<div class="credintials mt-20" ng-controller="AccordionDemoCtrl">
+									<div class="credintials clckevent mt-20" ng-controller="AccordionDemoCtrl">
 									<uib-accordion close-others="oneAtATime">
 										<uib-accordion-group is-open="status.isFirstOpen" class="panel-default">
-											<uib-accordion-heading>Access Code <i class="pull-right fa" ng-class="{'fa-minus': status.isFirstOpen, 'fa-plus': !status.isFirstOpen}"></i></uib-accordion-heading>
+											<uib-accordion-heading><div ng-click="cleanAccordionFormObject('Add User','accessCode')">Access Code <i class="pull-right fa" ng-class="{'fa-minus': status.isFirstOpen, 'fa-plus': !status.isFirstOpen}"></i></div></uib-accordion-heading>
 											<div class="modal-body p-0">
 												<span class="error">{{accesscode_error}}</span>
 												<div class="row">
@@ -339,7 +339,7 @@
 										</uib-accordion-group>
 													
 										<uib-accordion-group is-open="status.open1" class="panel-default">
-											<uib-accordion-heading>Phone Code <i class="pull-right fa" ng-class="{'fa-minus': status.open1, 'fa-plus': !status.open1}"></i></uib-accordion-heading>
+											<uib-accordion-heading><div ng-click="cleanAccordionFormObject('Add User','phoneCode')">Phone Code <i class="pull-right fa" ng-class="{'fa-minus': status.open1, 'fa-plus': !status.open1}"></i></div></uib-accordion-heading>
 											<div class="modal-body p-0">
 											<span class="error">{{ phone_error }}</span>
 												<div class="row">
@@ -406,7 +406,7 @@
 										</uib-accordion-group>
 													
 										<uib-accordion-group is-open="status.open2" class="panel-default">
-											<uib-accordion-heading >RFID Code <i class="pull-right fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i></uib-accordion-heading>
+											<uib-accordion-heading ><div ng-click="cleanAccordionFormObject('Add User','rfid')">RFID Code <i class="pull-right fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i></div></uib-accordion-heading>
 											<div class="modal-body p-0">
 											<span class="error">{{ rfid_error }}</span>
 												<form ng-submit="saveRFID(rfid, rfid_form)" ng-validate="validationOptions" name="rfid_form">
@@ -470,7 +470,7 @@
 										</uib-accordion-group>
 													
 										<uib-accordion-group is-open="status.open3" class="panel-default">
-											<uib-accordion-heading>NFC Code <i class="pull-right fa" ng-class="{'fa-minus': status.open3, 'fa-plus': !status.open3}"></i></uib-accordion-heading>
+											<uib-accordion-heading><div ng-click="cleanAccordionFormObject('Add User','savenfc')">NFC Code <i class="pull-right fa" ng-class="{'fa-minus': status.open3, 'fa-plus': !status.open3}"></i></div></uib-accordion-heading>
 											<span class="error">{{NFCCodeMessage}}</span>
 											<div class="modal-body p-0">
 												<div class="row">
@@ -537,7 +537,7 @@
 										</uib-accordion-group>
 													
 										<uib-accordion-group is-open="status.open4" class="panel-default">
-											<uib-accordion-heading>BLE Code <i class="pull-right fa" ng-class="{'fa-minus': status.open4, 'fa-plus': !status.open4}"></i></uib-accordion-heading>
+											<uib-accordion-heading><div ng-click="cleanAccordionFormObject('Add User','ble_code')">BLE Code <i class="pull-right fa" ng-class="{'fa-minus': status.open4, 'fa-plus': !status.open4}"></i></div></uib-accordion-heading>
 											<div class="modal-body p-0">
 											<span class="error">{{ blecode_error }}</span>
 												<div class="row">
