--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -297,10 +297,10 @@
 								
 								<md-tab label="Credentials">
 								<md-content>														
-									<div class="credintials mt-20" ng-controller="AccordionDemoCtrl">
+									<div class="credintials clckevent mt-20" ng-controller="AccordionDemoCtrl">
 									<uib-accordion close-others="oneAtATime">
 										<uib-accordion-group is-open="status.isFirstOpen" class="panel-default">
-											<uib-accordion-heading>Access Code <i class="pull-right fa" ng-class="{'fa-minus': status.isFirstOpen, 'fa-plus': !status.isFirstOpen}"></i></uib-accordion-heading>
+											<uib-accordion-heading><div ng-click="cleanAccordionFormObject('Edit User','editAccess')">Access Code <i class="pull-right fa" ng-class="{'fa-minus': status.isFirstOpen, 'fa-plus': !status.isFirstOpen}"></i></div></uib-accordion-heading>
 											<div class="modal-body p-0">
 												<div class="row">
 													<form role="form"  ng-submit="submitEditAccessCode(editAccess, access_edit_form)" ng-validate="validationOptions" name="access_edit_form">
@@ -361,7 +361,7 @@
 										</uib-accordion-group>
 													
 										<uib-accordion-group is-open="status.open1" class="panel-default">
-											<uib-accordion-heading>Phone Code <i class="pull-right fa" ng-class="{'fa-minus': status.open1, 'fa-plus': !status.open1}"></i></uib-accordion-heading>
+											<uib-accordion-heading><div ng-click="cleanAccordionFormObject('Edit User','phoneedit')">Phone Code <i class="pull-right fa" ng-class="{'fa-minus': status.open1, 'fa-plus': !status.open1}"></i></div></uib-accordion-heading>
 											<div class="modal-body p-0">
 												<div class="row">
 													<form ng-submit="submitEditPhoneCode(phoneedit, phone_edit_form)" ng-validate="validationOptions" name="phone_edit_form">
@@ -428,7 +428,7 @@
 										</uib-accordion-group>
 													
 										<uib-accordion-group is-open="status.open2" class="panel-default">
-											<uib-accordion-heading>RFID Code <i class="pull-right fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i></uib-accordion-heading>
+											<uib-accordion-heading><div ng-click="cleanAccordionFormObject('Edit User','editRfid')">RFID Code <i class="pull-right fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i></div></uib-accordion-heading>
 											<div class="modal-body p-0">
 												<div class="row">
 													<form ng-submit="submitEditRFIDCode(editRfid, rfid_form)" name="rfid_form" ng-validate="validationOptions" >
@@ -492,7 +492,7 @@
 										</uib-accordion-group>
 													
 										<uib-accordion-group is-open="status.open3" class="panel-default">
-											<uib-accordion-heading>NFC Code <i class="pull-right fa" ng-class="{'fa-minus': status.open3, 'fa-plus': !status.open3}"></i></uib-accordion-heading>
+											<uib-accordion-heading><div ng-click="cleanAccordionFormObject('Edit User','editNfc')">NFC Code <i class="pull-right fa" ng-class="{'fa-minus': status.open3, 'fa-plus': !status.open3}"></i></div></uib-accordion-heading>
 											<div class="modal-body p-0">
 												<div class="row">
 													<span class="error">{{NfcCodeMessage}}</span>
@@ -555,7 +555,7 @@
 										</uib-accordion-group>
 													
 										<uib-accordion-group is-open="status.open4" class="panel-default">
-											<uib-accordion-heading>BLE Code <i class="pull-right fa" ng-class="{'fa-minus': status.open4, 'fa-plus': !status.open4}"></i></uib-accordion-heading>
+											<uib-accordion-heading><div ng-click="cleanAccordionFormObject('Edit User','editBle')">BLE Code <i class="pull-right fa" ng-class="{'fa-minus': status.open4, 'fa-plus': !status.open4}"></i></div></uib-accordion-heading>
 											<div class="modal-body p-0">
 												<div class="row">
 													<span class="error">{{ bleerror }}</span>
