schedule list view delete

--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -72,7 +72,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Account Number/ICCID</label>
-														<input type="text" name="" id="" ng-model="device.account_no" class="form-control" number maxlength="16" placeholder="">
+														<input type="text" name="" id="" ng-model="device.account_no" class="form-control" number maxlength="16" placeholder="" required>
 													</div>
 												</div>
 												<div class="row">
@@ -82,7 +82,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Registration Code</label>
-														<input ng-model="device.reg_code" type="text" name="" id="" class="form-control" placeholder="">
+														<input ng-model="device.reg_code" type="text" name="" id="" class="form-control" placeholder="" required>
 													</div>
 												</div>
 												<div class="row">
