--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -88,7 +88,7 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Phone Number</label>
-														<input type="text" name="" id="" class="form-control" ng-model="device.phone_no" pattern="^(?:\+|00|011)[. ()-]*(?:\d[. ()-]*){11,12}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" ng-keypress='onlyNumber($event)' placeholder="+1 201 555 0123" required>
+														<input type="text" name="" id="" class="form-control" ng-model="device.phone_no" pattern="/^\+\d{1,3} [\d\s\.\(\)-]{,12}(x\d*)?$/" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" ng-keypress='onlyNumber($event)' placeholder="+1 2015550123" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Bluetooth Mac Id</label>
