--- a/elika-warehouse/views/tmpl/inventory/edit-device.html
+++ b/elika-warehouse/views/tmpl/inventory/edit-device.html
@@ -123,7 +123,7 @@
 									
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Phone Number</label>
-										<input type="text" name="" id="" class="form-control" ng-model="device.device_phone_no" pattern="^(?:\+|00|011)[. ()-]*(?:\d[. ()-]*){11,12}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" placeholder="">
+										<input type="text" name="" id="" class="form-control" ng-model="device.device_phone_no" pattern="^\+[1-9]{1}[0-9]{3,14}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" placeholder="">
 									</div>
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Bluetooth Mac Id</label>
